--- a/index.htm
+++ b/index.htm
@@ -1,1 +1,63 @@
-Add index.html with lyrics page
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dusk Till Dawn - Lyrics</title>
+  <style>
+    body {
+      background-color: #121212;
+      color: #f0f0f0;
+      font-family: 'Arial', sans-serif;
+      max-width: 600px;
+      margin: 30px auto;
+      padding: 15px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px #555;
+    }
+    img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    h1, h2 {
+      text-align: center;
+      font-weight: bold;
+      margin-bottom: 15px;
+    }
+    p {
+      line-height: 1.6;
+      white-space: pre-wrap;
+      font-size: 18px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Dusk Till Dawn</h1>
+  <h2>Zayn feat. Sia</h2>
+  <img src="https://is1-ssl.mzstatic.com/image/thumb/Music128/v4/92/c5/5d/92c55d45-cff4-dac6-8a9d-cc857a55214b/source/600x600bb.jpg" alt="Dusk Till Dawn Cover" />
+  <p>
+You and I  
+We’re like diamonds in the sky  
+You’re a shooting star I see  
+A vision of ecstasy  
+
+When you hold me, I’m alive  
+We’re like diamonds in the sky  
+I knew that we’d survive  
+At dusk till dawn  
+&nbsp;  
+If you feel the world  
+Falling down  
+Hold on to me  
+Don’t let go  
+&nbsp;  
+Baby, I’m right here  
+As dusk till dawn  
+I’ll be loving you ’til the lights go out  
+&nbsp;  
+(وغيرها من كلمات الأغنية حسب اللي تحب تضيفه)
+  </p>
+</body>
+</html>
+
